Add collision check query builder

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -67,6 +67,7 @@ add_library(${PROJECT_NAME}
   src/config/gnuplot_config.cpp
   src/config/html_config.cpp
   src/config/motion_planning_config.cpp
+  src/benchmarks/builder/collision_check.cpp
   src/benchmarks/builder/motion_planning.cpp
   src/benchmarks/motion_planning_benchmark.cpp
   src/benchmarks/collision_check_benchmark.cpp
