--- a/mtc/CMakeLists.txt
+++ b/mtc/CMakeLists.txt
@@ -25,6 +25,7 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME}
   src/pickplace.cpp
+  src/pickplace_builder.cpp
 )
 
 add_executable(run_pickplace src/run_pickplace.cpp)
