--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(${PROJECT_NAME}
   src/token.cpp
   src/dataset.cpp
   src/benchmark.cpp
+  src/profiler.cpp
   src/aggregation.cpp
   src/robot.cpp
   src/scene.cpp
