Add colormap from robowflex

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -47,6 +47,7 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME}
+  src/colormap.cpp
   src/yaml.cpp
   src/io.cpp
   src/geometry.cpp
