--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -48,6 +48,7 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME}
   src/colormap.cpp
+  src/random.cpp
   src/yaml.cpp
   src/io.cpp
   src/geometry.cpp
