Add visualization from robowflex

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(${PROJECT_NAME}
   src/colormap.cpp
   src/random.cpp
   src/tf.cpp
+  src/visualization.cpp
   src/yaml.cpp
   src/io.cpp
   src/geometry.cpp
