--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -76,6 +76,7 @@ add_library(${PROJECT_NAME}
   src/benchmarks/builder/motion_planning_builder.cpp
   src/benchmarks/profiler/motion_planning_profiler.cpp
   src/benchmarks/profiler/collision_check_profiler.cpp
+  src/benchmarks/visualizer/motion_planning_visualizer.cpp
 )
 
 add_executable(motion_planning_mgi src/benchmarks/motion_planning_mgi_benchmark.cpp)
