Temporary disable collision check

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -72,10 +72,10 @@ add_library(${PROJECT_NAME}
   src/config/gnuplot_config.cpp
   src/config/html_config.cpp
   src/config/motion_planning_config.cpp
-  src/benchmarks/builder/collision_check_builder.cpp
+  # src/benchmarks/builder/collision_check_builder.cpp
   src/benchmarks/builder/motion_planning_builder.cpp
   src/benchmarks/profiler/motion_planning_profiler.cpp
-  src/benchmarks/profiler/collision_check_profiler.cpp
+  # src/benchmarks/profiler/collision_check_profiler.cpp
   src/benchmarks/visualizer/motion_planning_visualizer.cpp
 )
 
@@ -85,10 +85,10 @@ target_link_libraries(motion_planning_mgi ${PROJECT_NAME} ${catkin_LIBRARIES} ya
 add_executable(motion_planning_pp src/benchmarks/motion_planning_pp_benchmark.cpp)
 target_link_libraries(motion_planning_pp ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
 
-if("${catkin_LIBRARIES}" MATCHES "moveit_collision_detection_bullet")
-  add_executable(collision_check src/benchmarks/collision_check_benchmark.cpp)
-  target_link_libraries(collision_check fcl ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
-endif()
+# if("${catkin_LIBRARIES}" MATCHES "moveit_collision_detection_bullet")
+#   add_executable(collision_check src/benchmarks/collision_check_benchmark.cpp)
+#   target_link_libraries(collision_check fcl ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
+# endif()
 
 add_executable(plot_dataset src/plot_dataset.cpp)
 target_link_libraries(plot_dataset ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
@@ -106,7 +106,7 @@ install(TARGETS
   ${PROJECT_NAME}
   motion_planning_mgi
   motion_planning_pp
-  collision_check
+  # collision_check
   plot_dataset
   generate_plots
   aggregate
