Update generate_dataset node

--- a/benchmark_suite/config/plots.yaml
+++ b/benchmark_suite/config/plots.yaml
@@ -1,89 +1,106 @@
-html_config:
-  - title: PlanningPipeline vs MoveGroupInterface
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - type/MOTION PLANNING MGI
-    xtick_filters:
-      - config/scene/
-      - config/planner/RRTConnect
-      - config/collision_detector/FCL
-      - config/request/jc-goal
-    metrics:
-      - time: boxplot
+gnuplot_config:
+  plots:
+    - legends:
+        - metrics/
+      labels:
+        - metrics/
+      metrics:
+        - type: boxplot
+          names:
+            - stage_solution_costs_grasp pose IK
+            - stage_solution_costs_place pose IK
+  options:
+    terminal: SVG
+    n_row: 1
+    n_col: 1
 
-  - title: Scenes vs Constraints
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - config/request/
-    xtick_filters:
-      - config/planner/RRTConnect
-      - config/collision_detector/FCL
-    metrics:
-      - time: boxplot
-      - avg_success: bargraph
-      - avg_correct: bargraph
 
-  - title: Planners vs Scenes
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - config/scene/
-    xtick_filters:
-      - config/planner/
-      - config/collision_detector/FCL
-      - config/request/jc-goal
-      - config/pipeline/ompl
-    metrics:
-      - time: boxplot
-      - avg_success: bargraph
-      - avg_correct: bargraph
+# html_config:
+#   - title: PlanningPipeline vs MoveGroupInterface
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - type/MOTION PLANNING MGI
+#     xtick_filters:
+#       - config/scene/
+#       - config/planner/RRTConnect
+#       - config/collision_detector/FCL
+#       - config/request/jc-goal
+#     metrics:
+#       - time: boxplot
 
-  - title: Planners vs Collision Detectors (mesh-scene)
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - config/collision_detector/
-    xtick_filters:
-      - config/scene/bbt-mesh
-      - config/planner/
-      - config/request/jc-goal
-      - config/pipeline/ompl
-    metrics:
-      - time: boxplot
-      - avg_success: bargraph
-      - avg_correct: bargraph
+#   - title: Scenes vs Constraints
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - config/request/
+#     xtick_filters:
+#       - config/planner/RRTConnect
+#       - config/collision_detector/FCL
+#     metrics:
+#       - time: boxplot
+#       - avg_success: bargraph
+#       - avg_correct: bargraph
 
-  - title: Planners vs Collision Detectors (primitive-scene)
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - config/collision_detector/
-    xtick_filters:
-      - config/scene/bbt-primitive
-      - config/planner/
-      - config/request/jc-goal
-      - config/pipeline/ompl
-    metrics:
-      - time: boxplot
-      - avg_success: bargraph
-      - avg_correct: bargraph
+#   - title: Planners vs Scenes
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - config/scene/
+#     xtick_filters:
+#       - config/planner/
+#       - config/collision_detector/FCL
+#       - config/request/jc-goal
+#       - config/pipeline/ompl
+#     metrics:
+#       - time: boxplot
+#       - avg_success: bargraph
+#       - avg_correct: bargraph
 
-  - title: Planners vs Collision Detectors (empty-scene)
-    legend_filters:
-      - type/MOTION PLANNING PP
-      - config/collision_detector/
-    xtick_filters:
-      - config/scene/empty-scene
-      - config/planner/
-      - config/request/jc-goal
-      - config/pipeline/ompl
-    metrics:
-      - time: boxplot
-      - avg_success: bargraph
-      - avg_correct: bargraph
+#   - title: Planners vs Collision Detectors (mesh-scene)
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - config/collision_detector/
+#     xtick_filters:
+#       - config/scene/bbt-mesh
+#       - config/planner/
+#       - config/request/jc-goal
+#       - config/pipeline/ompl
+#     metrics:
+#       - time: boxplot
+#       - avg_success: bargraph
+#       - avg_correct: bargraph
 
-aggregate_config:
-  aggregate:
-    - raw_metric: success
-      new_metric: avg_success
-      type: average
-    - raw_metric: correct
-      new_metric: avg_correct
-      type: average
+#   - title: Planners vs Collision Detectors (primitive-scene)
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - config/collision_detector/
+#     xtick_filters:
+#       - config/scene/bbt-primitive
+#       - config/planner/
+#       - config/request/jc-goal
+#       - config/pipeline/ompl
+#     metrics:
+#       - time: boxplot
+#       - avg_success: bargraph
+#       - avg_correct: bargraph
+
+#   - title: Planners vs Collision Detectors (empty-scene)
+#     legend_filters:
+#       - type/MOTION PLANNING PP
+#       - config/collision_detector/
+#     xtick_filters:
+#       - config/scene/empty-scene
+#       - config/planner/
+#       - config/request/jc-goal
+#       - config/pipeline/ompl
+#     metrics:
+#       - time: boxplot
+#       - avg_success: bargraph
+#       - avg_correct: bargraph
+
+# aggregate_config:
+#   aggregate:
+#     - raw_metric: success
+#       new_metric: avg_success
+#       type: average
+#     - raw_metric: correct
+#       new_metric: avg_correct
+#       type: average
