--- a/benchmark_suite/config/collision_check.yaml
+++ b/benchmark_suite/config/collision_check.yaml
@@ -1,48 +1,76 @@
+###################
+# Collision Check #
+###################
+
+# Describes benchmark parameters (independant of profilers)
 benchmark_config:
   parameters:
-    name: Collision Check         # Name of the benchmark dataset
-    runs: 1000                    # Number of trials per pair-wise combination
+    runs: 10000                     # Number of trials for each query
+    name: "Collision Check"         # Default ""    | Overridden by ROS Param /benchmark/name
+    visualize: false                # Default false | Overridden by ROS Param /benchmark/visualize
+    output_file: ""                 # Default ""    | Overridden by ROS Param /benchmark/output_file
+    verbose_status_trial: False     # Print status before each trial of all queries
+    verbose_status_query: True      # Print status before each query
 
-  robot_name: panda
+# Describes config for building collision check pair-wise queries
+profiler_config:
+  # Resource moveit_config (robot)
+  robot:
+    name: panda
+    resources:
+      urdf: package://moveit_benchmark_suite_resources/robots/panda/urdf/panda.urdf
+      srdf: package://moveit_benchmark_suite_resources/robots/panda/config/panda.srdf
+      kinematics: package://moveit_benchmark_suite_resources/robots/panda/config/kinematics.yaml
+      joint_limits: package://moveit_benchmark_suite_resources/robots/panda/config/joint_limits.yaml
+
+  # moveit_msgs/PlanningScene | custom building cluttering scene
+  scenes:
+    - name: empty_scene
+      resource: package://moveit_benchmark_suite_resources/scenes/empty/empty.urdf.xacro
+    - name: primitive_scene
+      resource: package://moveit_benchmark_suite_resources/scenes/bbt/panda/primitive.urdf.xacro
+
+    # Special resource for building cluterred scene free of contacts
+    - name: cluttered_scene
+      resource:
+        cluttered_scene:
+          robot_state: ready-state
+          n_objects: 100
+          rng: 123                    # Random number generator
+          object_type: MESH           # MESH, BOX
+          resource: package://moveit_resources_panda_description/meshes/collision/link5.stl
+          bounds:
+            - [0.3, 1.0]       # [Lower bound, Upper bound]
 
   collision_detectors:
     - FCL
     - Bullet
 
-  robot_states:                   # List of RobotSate Message with a state name
+  # Resource moveit_msgs/RobotState
+  robot_states:
     - name: ready-state
-      robot_state:
+      resource:
         joint_state:
           header:
             frame_id: panda_link0
           name: [panda_joint1, panda_joint2, panda_joint3, panda_joint4, panda_joint5, panda_joint6, panda_joint7]
           position: [0, -0.785, 0, -2.356, 0, 1.571, 0.785]
     - name: extended-state
-      robot_state:
+      resource:
         joint_state:
           header:
             frame_id: panda_link0
           name: [panda_joint1, panda_joint2, panda_joint3, panda_joint4, panda_joint5, panda_joint6, panda_joint7]
           position: [0, 1.5, 0, 0, 0, 0, 0]
 
-  collision_requests:             # collision_detection::CollisionRequest
-    - name: requests
-      distance: False             # Compute proximity distance (Slow)
-      cost: False                 # Compute collision cost
-      contacts: True              # Compute contacts
-      max_contacts: 99            # Maximum number of contacts
-      max_contacts_per_pair: 10   # Maximum numbe of contacts per pair of bodies
-      max_cost_sources: 1         # Defines how many of the top cost sources should be returned
-      verbose: False              # Report information about collision
-
-  clutter_worlds:                 # Creates cluttered worlds with the specified robot_state free of contact
-    - name: empty-world
-      n_objects: 0
-    - name: clutter-world
-      robot_state: ready-state
-      n_objects: 100
-      rng: 123                    # Random number generator
-      object_type: MESH           # MESH, BOX
-      resource: package://moveit_resources_panda_description/meshes/collision/link5.stl
-      scale:
-        - bound: [0.3, 1.0]       # [Lower bound, Upper bound]
+  # Resource collision_detection::CollisionRequest
+  collision_requests:
+    - name: default
+      resource:
+        distance: False             # Compute proximity distance (Slow)
+        cost: False                 # Compute collision cost
+        contacts: True              # Compute contacts
+        max_contacts: 99            # Maximum number of contacts
+        max_contacts_per_pair: 10   # Maximum numbe of contacts per pair of bodies
+        max_cost_sources: 1         # Defines how many of the top cost sources should be returned
+        verbose: False              # Report information about collision
