--- a/mtc/config/pickplace.yaml
+++ b/mtc/config/pickplace.yaml
@@ -26,25 +26,23 @@ profiler_config:
     # Gripper gap
     hand_joint_name: "panda_finger_joint1"
     hand_open_gap: 0.08
-    hand_close_gap: 0.0254
+    hand_close_gap: 0.067
 
     # Scene frames
     world_frame: "world"
     table_reference_frame: "world"
-    object_reference_frame: "world"
+    object_reference_frame: "shelf_board4"
     surface_link: "shelf_board4"
 
     # Collision object for picking
-    # CUBE object specifications
     object_name: "soupcan"
     object_dimensions: [0.067911, 0.067743, 0.101855] # [length, width, height]
-    object_pose: [0, 0, 0.0509275, 0, 0, 0]
 
     # Gripper grasp frame transform [x,y,z,r,p,y]
     grasp_frame_transform: [0.0441, -0.0441, 0.1, 1.5707, -2.356, 1.5707]
 
     # Place pose [x,y,z,r,p,y]
-    place_pose: [0.8, -0.18, 0.468, 0, 0, 3.1415]
+    place_pose: [0, 0, 0.01, 0, 0, 0]
     place_surface_offset: 0.0001 # place offset from table
 
     # Valid distance range when approaching an object for picking
@@ -54,6 +52,34 @@ profiler_config:
     # Valid height range when lifting an object after pick
     lift_object_min_dist: 0.003
     lift_object_max_dist: 0.1
+
+  # Resource moveit_config (robot)
+  robot:
+    name: panda
+    resources:
+      urdf: package://moveit_benchmark_suite_resources/robots/panda/urdf/panda.urdf
+      srdf: package://moveit_benchmark_suite_resources/robots/panda/config/panda.srdf
+      kinematics: package://moveit_benchmark_suite_resources/robots/panda/config/kinematics.yaml
+      joint_limits: package://moveit_benchmark_suite_resources/robots/panda/config/joint_limits.yaml
+    parameters:
+      # ready state
+      robot_state:
+        joint_state:
+          header:
+            frame_id: panda_link0
+          name: [panda_joint1, panda_joint2, panda_joint3, panda_joint4, panda_joint5, panda_joint6, panda_joint7]
+          position: [0, -0.785, 0, -2.356, 0, 1.571, 0.785]
+
+  scene:
+    name: simple-shelf
+    resource: package://moveit_benchmark_suite_resources/scenes/shelf/panda/simple.urdf.xacro
+
+  collision_detectors:
+    - FCL
+
+  planning_pipelines:
+    - name: ompl
+      resource: package://moveit_benchmark_suite_resources/robots/panda/config/ompl_planning.yaml
 
   # Configure solvers/planners that will be used in tasks
   solvers:
