--- a/mtc/CMakeLists.txt
+++ b/mtc/CMakeLists.txt
@@ -4,6 +4,7 @@ project(moveit_benchmark_suite_mtc)
 find_package(catkin REQUIRED COMPONENTS
   actionlib
   moveit_benchmark_suite_core
+  moveit_benchmark_suite_output
   moveit_task_constructor_core
   moveit_task_constructor_msgs
   rosparam_shortcuts
