--- a/core/package.xml
+++ b/core/package.xml
@@ -8,6 +8,8 @@
 
 	<buildtool_depend>catkin</buildtool_depend>
 
+	<build_depend>cmake_modules</build_depend>
+
 	<depend>boost</depend>
 	<depend>eigen_conversions</depend>
 	<depend>moveit_core</depend>
@@ -15,6 +17,7 @@
 	<depend>moveit_ros_planning_interface</depend>
 	<depend>moveit_serialization</depend>
 	<depend>roscpp</depend>
+    <depend>tinyxml2</depend>
 	<depend>tf2_ros</depend>
 	<depend>urdf_to_scene</depend>
 
