--- a/output/config/aggregate.yaml
+++ b/output/config/aggregate.yaml
@@ -1,7 +1,7 @@
 aggregate_config:
   # filters:
   #   - {key: /hw/cpu/model, val: 158, predicate: '='}
-  aggregators:
+  statistics:
     - raw_metric: time
       new_metric: avg_time
       type: frequency
