Fix typo in profiler config

--- a/moveit/config/collision_check.yaml
+++ b/moveit/config/collision_check.yaml
@@ -15,7 +15,7 @@ benchmark_config:
 # Collision check pair-wise queries
 profiler_config:
   # MSA (urdf, srdf, kinematics, joint limits)
-  robot:
+  robots:
   - name: panda
     resources:
       urdf: package://moveit_benchmark_suite_resources/robots/panda/urdf/panda.urdf
