--- a/moveit/CMakeLists.txt
+++ b/moveit/CMakeLists.txt
@@ -36,10 +36,8 @@ target_link_libraries(motion_planning_mgi ${PROJECT_NAME} ${catkin_LIBRARIES})
 add_executable(motion_planning_pp src/motion_planning_pp_benchmark.cpp)
 target_link_libraries(motion_planning_pp ${PROJECT_NAME} ${catkin_LIBRARIES})
 
-if("${catkin_LIBRARIES}" MATCHES "moveit_collision_detection_bullet")
-  add_executable(collision_check src/collision_check_benchmark.cpp)
-  target_link_libraries(collision_check fcl ${PROJECT_NAME} ${catkin_LIBRARIES})
-endif()
+add_executable(collision_check src/collision_check_benchmark.cpp)
+target_link_libraries(collision_check ${PROJECT_NAME} ${catkin_LIBRARIES})
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
