fix common typo

--- a/moveit/config/collision_check.yaml
+++ b/moveit/config/collision_check.yaml
@@ -2,7 +2,7 @@
 # Collision Check (PlanningScene) #
 ###################################
 
-# Benchmark configuration (independant of profilers)
+# Benchmark configuration (independent of profilers)
 benchmark_config:
   parameters:
     runs: 10000                     # Number of trials for each query
