--- a/moveit/config/motion_planning_mgi.yaml
+++ b/moveit/config/motion_planning_mgi.yaml
@@ -2,7 +2,7 @@
 # Motion Planning (MoveGroupInterface) #
 ########################################
 
-# Describes benchmark parameters (independant of profilers)
+# Describes benchmark parameters (independent of profilers)
 benchmark_config:
   parameters:
     runs: 20                        # Number of trials for each query
